// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider /> should render Divider within flex container 1`] = `
#razorpay-blade .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

#razorpay-blade .c0 {
  border-width: 0px;
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-style: solid;
}

#razorpay-blade .c1 {
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (min-width:320px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

<div>
  <div
    class="c0 "
    data-blade-component="box"
  >
    <div
      class="c0 c1 "
      data-blade-component="divider"
      role="separator"
    />
  </div>
</div>
`;

exports[`<Divider /> should render horizontal Divider using width 1`] = `
#razorpay-blade .c0 {
  display: block;
  width: 100px;
}

#razorpay-blade .c0 {
  width: 100%;
  border-width: 0px;
  border-bottom-color: hsla(216,15%,54%,0.18);
  border-style: solid;
}

#razorpay-blade .c1 {
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 100%;
}

@media screen and (min-width:320px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

<div>
  <div
    class="c0 "
    data-blade-component="box"
  >
    <div
      class="c0 c1 "
      data-blade-component="divider"
      role="separator"
    />
  </div>
</div>
`;

exports[`<Divider /> should render vertical Divider using height 1`] = `
#razorpay-blade .c0 {
  display: block;
  height: 100px;
}

#razorpay-blade .c0 {
  height: 100%;
  border-width: 0px;
  border-left-color: hsla(216,15%,54%,0.18);
  border-style: solid;
}

#razorpay-blade .c1 {
  border-left-style: solid;
  border-left-width: 1px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  height: 100%;
}

@media screen and (min-width:320px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

@media screen and (min-width:480px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

@media screen and (min-width:768px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

@media screen and (min-width:1024px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

@media screen and (min-width:1200px) {
  #razorpay-blade .c0 {
    border-style: solid;
  }
}

<div>
  <div
    class="c0 "
    data-blade-component="box"
  >
    <div
      class="c0 c1 "
      data-blade-component="divider"
      role="separator"
    />
  </div>
</div>
`;
